fix(datepicker, calendar): fix value issue in julian mode when selected a day, fixed spacing on input

--- a/packages/web-components/src/components/rux-datetime-picker/rux-datetime-picker.scss
+++ b/packages/web-components/src/components/rux-datetime-picker/rux-datetime-picker.scss
@@ -75,6 +75,10 @@ input[type='number'] {
                 width: var(--double-width);
             }
 
+            &.day.ordinal-day {
+                width: var(--triple-width);
+            }
+
             &.ms {
                 width: var(--triple-width);
             }
